--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,57 +1,31 @@
 name: CI-CD
 
-on: 
+on:
   push:
-    branches: ["main"]
+    branches:
+      - "main"
   workflow_dispatch:
+    
 
 jobs:
   CI:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4.1.2
-        name: Checkout do repositorio
-      - name: Autenticação no Docker
-        uses: docker/login-action@v3.1.0
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_PWD }}
-      - name: Construção da imagem Docker
-        uses: docker/build-push-action@v5.3.0
-        with:
-          context: ./src
-          file: ./src/Dockerfile
-          push: true
-          tags: | 
-            fabricioveronez/devops4devs-news:latest
-            fabricioveronez/devops4devs-news:${{github.run_number}}
+      - name: Construção da Inagem Docker
+        run: echo "Docker Build"
+      - name: "Publicar a imagem Docker Hub"
+        run: echo "Docker push"
+
   CD:
-    needs: [CI]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4.1.2
-        name: Checkout do repositorio
-      - name: Configuração do ambiente AWS
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: "us-east-1"
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY}}
-          aws-secret-access-key: ${{secrets.AWS_ACCESS_SECRET}}
-      - name: Configuração do Kubeconfig
-        run: aws eks update-kubeconfig --name devops4devs-eks --region us-east-1
-      - name: Atualização do Manifesto
-        shell: bash
-        run: |
-          sed -i "s/{{AWS_ACCESS_KEY}}/${{ secrets.AWS_ACCESS_KEY }}/g" ./k8s/deploy.yaml
-          sed -i "s/{{AWS_ACCESS_SECRET}}/${{ secrets.AWS_ACCESS_SECRET }}/g" ./k8s/deploy.yaml
-      - name: Executar o deploy
-        uses: Azure/k8s-deploy@v4.9
-        with:
-          manifests: |
-            ./k8s/deploy.yaml
-          images: |
-            fabricioveronez/devops4devs-news:${{github.run_number}}
-          
-        
+      - name: Conectar com Kubernetes
+        run: echo "Configuração do Kubeconfig"
+      - name: "Executar o deploy "
+        run:  "Kubectl apply"
+
+
+
   
-  
+
+    
