--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         run: echo "Docker push"
 
   CD:
+    needs: [CI]
     runs-on: ubuntu-latest
     steps:
       - name: Conectar com Kubernetes
