--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         name: Checkout do repositorio
-      - name: Construção da Imagem Docker
+      - name: Autenticação no docker
+        uses: docker/login-action@v3.1.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PWD }}
+      - name: Construção da imagem Docker
+        uses: docker/build-push-action@v5.3.0
+      
         with:
           context: ./src
-          file: devops4devs-01/src/Dockerfile
-      - name: "Publicar a Imagem no docker Hub"
-        run: echo "Docker push"
+          file: ./src/Dockerfile
+          push: true
+          tags: |
+            fabricioveronez/devops4devs-news:latest
+            fabricioveronez/devops4devs-news:${{github.run_number}}
+      
         
 
   CD:
