--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,26 +34,31 @@ jobs:
   CD:
     needs: [CI]
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Install SSH client
-      run: sudo apt-get install -y openssh-client
+      - name: Install SSH client
+        run: sudo apt-get install -y openssh-client
 
-    - name: Set up SSH tunnel
-      run: |
-        # Configuração do túnel SSH para o cluster Minikube
-        ssh -N -L 12345:192.168.58.2:8443 ${{ secrets.MINIKUBE_USERNAME }}@${{ secrets.MINIKUBE_HOST }} -i /home/marcio/.minikube/ca.key &
-        # Espera um pouco para garantir que o túnel esteja estabelecido
-        sleep 5
+      - name: Start kubectl proxy
+        run: kubectl proxy
 
-    - name: Apply Kubernetes resources
-      run: |
-        # Configura o Kubernetes para usar a porta local do túnel SSH
-        export KUBE_SSH_PORT=12345
-        kubectl apply -f k8s/deploy.yaml
+      - name: Set up SSH tunnel
+        run: |
+              # SSH tunnel configuration for Minikube cluster
+              ssh -NL 12345:127.0.0.1:8001 ${{ secrets.MINIKUBE_USERNAME }}@${{ secrets.MINIKUBE_HOST }} -i /home/marcio/.minikube/ca.key
 
-    - name: Check deployment status
-      run: kubectl get pods
+      - name: Apply Kubernetes resources
+        run: |
+              # Export the SSH port for Kubernetes
+                export KUBE_SSH_PORT=12345
+                /full/path/to/kubectl apply -f k8s/deploy.yaml
+
+      - name: Wait for deployment to be ready
+        run: |
+              kubectl rollout status deployment/<deployment_name> --timeout=300s
+
+      - name: Check deployment status
+        run: kubectl get pods
